--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1339,8 +1339,9 @@ on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale  1
 
-service charger /charger
+service charger /system/bin/charger
     class charger
+    group system graphics
     seclabel u:r:charger:s0
 
 service sec-sh /system/vendor/bin/sh /system/vendor/etc/init.sec.boot.sh
