--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1341,7 +1341,8 @@ on property:ro.data.large_tcp_window_size=true
 
 service charger /system/bin/charger
     class charger
-    group system graphics
+    user system
+    group system graphics input
     seclabel u:r:charger:s0
 
 service sec-sh /system/vendor/bin/sh /system/vendor/etc/init.sec.boot.sh
