--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -25,15 +25,27 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
+subsystem adsp
+    devname uevent_devpath
+    dirname /dev/adsp
+
+subsystem msm_camera
+    devname uevent_devpath
+    dirname /dev/msm_camera
+
 # the DIAG device node is not world writable/readable.
 /dev/diag                 0660   system     oem_2950
 
+/dev/alarm                0664   system     radio
 /dev/genlock              0666   system     system
 /dev/kgsl                 0666   system     system
 /dev/kgsl-3d0             0666   system     system
 /dev/kgsl-2d0             0666   root       root
 /dev/kgsl-2d1             0666   root       root
 /dev/ion                  0664   system     system
+/dev/qmi0                 0640   radio      radio
+/dev/qmi1                 0640   radio      radio
+/dev/qmi2                 0640   radio      radio
 /dev/lightsensor          0640   system     system
 /dev/rtc0                 0600   system     system
 /dev/smd0                 0660   system     system
@@ -117,6 +129,7 @@
 /dev/msm_rotator          0660   system     system
 
 #permissions for audio
+/dev/adsp/*               0660   system     audio
 /dev/audio_slimslave      0660   system     audio
 /dev/msm_qcelp            0660   system     audio
 /dev/msm_evrc             0660   system     audio
@@ -136,6 +149,7 @@
 /dev/msm_acdb             0660   system     audio
 /dev/msm_cad              0660   system     audio
 /dev/msm_fm               0660   system     audio
+/dev/msm_mp3              0660   system     audio
 /dev/msm_mvs              0660   system     audio
 /dev/msm_pcm_lp_dec       0660   system     audio
 /dev/msm_preproc_ctl      0660   system     audio
