trlte-common: rootdir: Change qmuxd service user from root to radio
Change-Id: If896e8150694302a919f6cd682823ab0f4f9b024

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1230,7 +1230,7 @@ service rmt_storage /system/vendor/bin/rmt_storage
 
 service qmuxd /system/vendor/bin/qmuxd
     class core
-    user root
+    user radio
     group radio audio bluetooth gps diag log
 
 service mdm_helper /system/vendor/bin/mdm_helper
